# matsuzawa-20260210-3

./: pyproject.toml
.github/prompts/: run_code_generator.md  run_code_reviewer.md
.github/workflows/: run_code_reviewer.yml  run_main_experiment.yml  run_sanity_check.yml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-0-qwen3-8b-gsm8k.yaml  proposed-qwen3-8b-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
